--- a/gsSlicerPro.csproj
+++ b/gsSlicerPro.csproj
@@ -57,9 +57,10 @@
       <!-- <Project>{0c518dda-28fe-44ca-9ab0-f9773974f13a}</Project> -->
       <!-- <Name>geometry3Sharp</Name> -->
     <!-- </ProjectReference> -->
-    <PackageReference Include="geometry3Sharp">
-      <Version>1.0.289</Version>
-    </PackageReference>
+    <ProjectReference Include="..\geometry3Sharp\geometry3Sharp.csproj">
+      <Project>{0c518dda-28fe-44ca-9ab0-f9773974f13a}</Project>
+      <Name>geometry3Sharp</Name>
+    </ProjectReference>
     <ProjectReference Include="..\gsGCode\gsGCode.csproj">
       <Project>{25de77c9-14a4-4562-9a24-0bf1e612d9a9}</Project>
       <Name>gsGCode</Name>
@@ -76,6 +77,9 @@
       <Project>{9b062971-a88e-4a3d-b3c9-12b78d15fa66}</Project>
       <Name>clipper_library</Name>
     </ProjectReference>
+    <PackageReference Include="UnityEngine">
+      <Version>2.0.1</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup />
   <ItemGroup />
